--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p>Guess what letter I'm thinking of</p>
         <p>Wins:<span id="wins"> 0</span></p>
         <p>Losses:<span id="losses"> 0</span></p>
-        <p>Guesses Left:<span id="left">10</span></p>
+        <p>Guesses Left:<span id="left">9 </span></p>
         <p>Your Guesses so far: <span id="guess"></span></p>
     </div>
 
-    <script type="text/javaScript" src="./assets/javascript/javascript.js"></script>
+    <script type="text/javaScript" src="./assets/javascript/game.js"></script>
 </body>
 </html>
